# genkiml

./: .gitignore  CMakeLists.txt  README.md  dashboard.py  genkiml.py  requirements-dashboard.txt  requirements-m1.txt  requirements.txt
.github/workflows/: build_and_test.yml  compile_and_test.yml
examples/: CMakeLists.txt  model_tf.onnx  single_sample.cpp
examples/keras/: CMakeLists.txt  generate_model.py
examples/keras/fc_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
examples/keras/fc_model/variables/: variables.data-00000-of-00001  variables.index
examples/keras_model/: main.cpp
examples/keras_model/fc_model/: keras_metadata.pb  saved_model.pb
examples/keras_model/fc_model/variables/: variables.data-00000-of-00001  variables.index
examples/onnx/: CMakeLists.txt  main.cpp
examples/windowed_model/: CMakeLists.txt  glfw.h  main.cpp  windowed_model.onnx
genki_ml/: CMakeLists.txt
genki_ml/cmake/: CMakeRC.cmake  convert_model.cmake  fetch_from_git.cmake  fetch_onnxruntime_dynamic_lib.cmake
genki_ml/source/: genki_ml.cpp  genki_ml.h
genkiml/: CMakeLists.txt
genkiml/cmake/: convert_model.cmake  fetch_onnxruntime_dynamic_lib.cmake  genkiml_python.cmake
genkiml/include/genkiml/: genkiml.h  windowed_model.h
genkiml/source/: genkiml.cpp  genkiml.h  load_model.cpp  preprocessing.h  windowed_model.h
tests/: CMakeLists.txt  main.cpp  model.cpp  test_model.onnx  windowed_model.cpp
